--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@t8/webapp-blank",
   "version": "0.1.0",
+  "private": true,
   "description": "",
   "main": "dist/server/index.js",
   "scripts": {
