--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "author": "axtk",
   "license": "ISC",
   "dependencies": {
-    "@t8/webapp": "^0.1.1",
+    "@t8/webapp-core": "^0.1.0",
     "express": "^5.1.0"
   },
   "devDependencies": {
