--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "typecheck": "tsc --noEmit"
   },
   "author": "axtk",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
     "@t8/webapp-build": "^0.1.8",
     "@types/express": "^5.0.3",
