--- a/package.json
+++ b/package.json
@@ -7,21 +7,17 @@
   "type": "module",
   "scripts": {
     "dev": "webapp-dev",
-    "preversion": "npm-run-all typecheck shape",
+    "preversion": "npm run shape",
     "prod": "webapp-prod 127.0.0.1:3000",
     "shape": "npx codeshape",
-    "start": "npm run dev",
-    "typecheck": "tsc --noEmit"
+    "start": "npm run dev"
   },
   "author": "axtk",
   "license": "MIT",
   "devDependencies": {
     "@t8/webapp-build": "^0.3.1",
     "@types/express": "^5.0.6",
-    "@types/node": "^24.10.1",
-    "cross-env": "^10.1.0",
-    "npm-run-all": "^4.1.5",
-    "typescript": "^5.9.3"
+    "@types/node": "^24.10.1"
   },
   "dependencies": {
     "@t8/webapp-core": "^0.1.11",
